--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,183 +3,36 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Hosted",
-            "type": "lldb",
-            "request": "launch",            
-            "program": "${workspaceFolder}/hosted/build/swindle_hosted",
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "name": "picoDebugRvsw",
-            "cwd": "${workspaceFolder}",                          
-            "executable": "build/lnBMP_default_pinout_M4_96M_CLANG.elf",
-            "gdbPath" : "${config:armToolchainPath}/arm-none-eabi-gdb",        
-            "request": "launch",
-            "type": "cortex-debug",
-            "runToEntryPoint": "main",
-            "servertype": "bmp",
-            "interface": "swd",
-            "device": "rp2040",
-            "BMPGDBSerialPort" : "/dev/ttyBmpGdb3",
-            "runToMain": true,
-            "preLaunchCommands":[
-            "b deadEnd",
-            "set mem inaccessible-by-default off",
-            "set confirm off",
-            ],
-            "preRestartCommands": [
-            "enable breakpoint",
-            "break main"
-            ]
-    
-        },
-        {
-            "name": "Hosted_gdb",
-            "type": "gdb",            
-            "request": "launch",            
-            "program": "${workspaceFolder}/hosted/build/lnBMP_hosted",
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-           {
-            "name": "riscv_BMP",
-            "type": "gdb",
-            "request": "launch",
-            "cwd": "${workspaceRoot}",
-            "target": "${workspaceRoot}/build/lnBMP_default_pinout_CH32V3x_144M_CLANG.elf",
-            "gdbpath" : "${config:riscv_gdb}",        
-            "autorun": [        
-            "target extended-remote localhost:2000",
-            "set confirm off",
-            "set mem inaccessible-by-default off",
-            "set  architecture riscv:rv32",
-            "set remotetimeout unlimited",           
-            "mon rvswdp_scan",
-            "attach 1",
-            "load ",
-            "tb main ",
-            "b deadEnd "
-            ]
-         },
-         {
-            "name": "riscv_attach_BMP",
-            "type": "gdb",
-            "request": "launch",
-            "cwd": "${workspaceRoot}",
-            "target": "${workspaceRoot}/build/lnBMP_default_pinout_CH32V3x_144M_CLANG.elf",
-            "gdbpath" : "${config:riscv_gdb}",        
-            "autorun": [        
-            "target extended-remote localhost:2000",
-            "set confirm off",
-            "set mem inaccessible-by-default off",
-            "set  architecture riscv:rv32",
-            "set remotetimeout unlimited",
-            "set remote hardware-breakpoint-limit 4",
-            "set remote hardware-watchpoint-limit 0", 
-            "mon rvswdp_scan",
-            "attach 1",
-            //"mon halt",
-            //"interrupt",            
-           // "mon swreset 1",
-           // "set $pc=0 ",
-            "tb main ",
-            "b deadEnd "
-            ]
-         },
-         {
-            "name": "riscv_OCD",
-            "type": "gdb",
-            "request": "launch",
-            "cwd": "${workspaceRoot}",
-            "target": "${workspaceRoot}/build/lnBMP_default_pinout_CH32V3x_144M_CLANG.elf",
-            "gdbpath" : "${config:riscv_gdb}",        
-            "autorun": [        
-                "target extended-remote |  ${config:riscv_openocd_path}/openocd -c \"gdb_port pipe; log_output openocd.log\" -f ${config:riscv_openocd_path}/wch-riscv.cfg",
-                "set confirm off",
-                "set mem inaccessible-by-default off",
-                "set  architecture riscv:rv32",
-                "set remotetimeout unlimited",
-                "set remote hardware-breakpoint-limit 8",
-                "set remote hardware-watchpoint-limit 2", 
-                "mon reset halt",
-                "load ",
-                "tb main ",
-                "b deadEnd "
-                ]
-             },
-             {
-                "name": "riscv_fast_OCD",
-                "type": "gdb",
-                "request": "launch",
-                "cwd": "${workspaceRoot}",
-                "target": "${workspaceRoot}/build/lnBMP_default_pinout_CH32V3x_144M_CLANG.elf",
-                "gdbpath" : "${config:riscv_gdb}",   
-                "preLaunchTask"      : "CH32Flash",
-                "autorun": [        
-                    "target extended-remote |  ${config:riscv_openocd_path}/openocd -c \"gdb_port pipe; log_output openocd.log\" -f ${config:riscv_openocd_path}/wch-riscv.cfg",
-                    "set confirm off",
-                    "set mem inaccessible-by-default off",
-                    "set  architecture riscv:rv32",
-                    "set remotetimeout unlimited",
-                    "set remote hardware-breakpoint-limit 8",
-                    "set remote hardware-watchpoint-limit 2", 
-                    "mon reset halt",
-                    "tb main ",
-                    "b deadEnd ",
-                    "r"
-                    ]
-                 },
-             {
-            "name": "riscv_attach_OCD",
-            "type": "gdb",
-            "request": "launch",
-            "cwd": "${workspaceRoot}",
-            "target": "${workspaceRoot}/build/lnBMP_default_pinout_CH32V3x_144M_CLANG.elf",
-            "gdbpath" : "${config:riscv_gdb}",        
-            "autorun": [        
-                "target extended-remote |  ${config:riscv_openocd_path}/openocd -c \"gdb_port pipe; log_output openocd.log\" -f ${config:riscv_openocd_path}/wch-riscv.cfg",
-                "set confirm off",
-                "set mem inaccessible-by-default off",
-                "set  architecture riscv:rv32",
-                "set remotetimeout unlimited",
-                "set remote hardware-breakpoint-limit 8",
-                "set remote hardware-watchpoint-limit 2",                       
-                "mon reset halt",
-                ]
-             },
+    "configurations": [      
+       
              {
                 "name": "Arm",
                 "cwd": "${workspaceFolder}",
-                "svdFile" : "${workspaceRoot}/.vscode/STM32F103.svd",              
-                "executable": "build/swindle_default_pinout_M4_96M_CLANG.elf",
+                "svdFile" : "${workspaceRoot}/.vscode/rp2040.svd",              
+                "executable": "build/st7789.elf",
                 "gdbPath" : "${config:armToolchainPath}/arm-none-eabi-gdb", 
                 "request": "launch",
                 "type": "cortex-debug",
                 "runToEntryPoint": "main",
                 "servertype": "bmp",
                 "interface": "swd",
-                "device": "STM32F103",
+                "device": "rp2040",
                 "BMPGDBSerialPort" : "/dev/ttyBmpGdb2",
                 "runToMain": true,
-                "preLaunchCommands":[
-                "b deadEnd",
+                "preLaunchCommands":[                
                 "set mem inaccessible-by-default off",
                 "set confirm off"
                 ],
                 "preRestartCommands": [
-                "enable breakpoint",
-                "break main"
+                "enable breakpoint",                
                 ]
       
             },
             {
               "name": "Arm-attach",
               "cwd": "${workspaceFolder}",              
-              "svdFile" : "${workspaceRoot}/.vscode/STM32F103.svd",              
-              "executable": "build/lnBMP_default_pinout_M4_96M_CLANG.elf",
+              "svdFile" : "${workspaceRoot}/.vscode/rp2040.svd",              
+              "executable": "build/st7789.elf",
       
               "request": "attach",
               "type": "cortex-debug",
@@ -189,14 +42,12 @@
               "device": "STM32F103",
               "BMPGDBSerialPort" : "/dev/ttyBmpGdb",
               "runToMain": true,
-              "preLaunchCommands":[
-              "b deadEnd",
+              "preLaunchCommands":[              
               "set mem inaccessible-by-default off",
               "set confirm off"
               ],
               "preRestartCommands": [
-              "enable breakpoint",
-              "break main"
+              "enable breakpoint",              
               ]
       
           },
@@ -204,24 +55,22 @@
             "name": "pico-attach",
             "cwd": "${workspaceFolder}",              
             "svdFile" : "${workspaceRoot}/.vscode/rp2040.svd",              
-            "executable": "build/lnBMP_default_pinout_RP2040_72M_CLANG.elf",
-    
+            "executable": "build/st7789.elf",
+            "gdbPath" : "${config:armToolchainPath}/arm-none-eabi-gdb",
             "request": "attach",
             "type": "cortex-debug",
             "runToEntryPoint": "main",
             "servertype": "bmp",
             "interface": "swd",
             "device": "rp2040",
-            "BMPGDBSerialPort" : "/dev/ttyBmpGdb2",
+            "BMPGDBSerialPort" : "/dev/ttyBmpGdb3",
             "runToMain": true,
-            "preLaunchCommands":[
-            "b deadEnd",
+            "preLaunchCommands":[            
             "set mem inaccessible-by-default off",
             "set confirm off"
             ],
             "preRestartCommands": [
-            "enable breakpoint",
-            "break main"
+            "enable breakpoint",            
             ]
     
         },
@@ -229,32 +78,31 @@
             "name": "pico-load",
             "cwd": "${workspaceFolder}",              
             "svdFile" : "${workspaceRoot}/.vscode/rp2040.svd",              
-            "executable": "build/lnBMP_default_pinout_RP2040_72M_CLANG.elf",
-    
+            "executable": "build/st7789.elf",
+            "gdbPath" : "${config:armToolchainPath}/arm-none-eabi-gdb",
             "request": "launch",
             "type": "cortex-debug",
             "runToEntryPoint": "main",
             "servertype": "bmp",
             "interface": "swd",
             "device": "rp2040",
-            "BMPGDBSerialPort" : "/dev/ttyBmpGdb2",
+            "BMPGDBSerialPort" : "/dev/ttyBmpGdb3",
             "runToMain": true,
-            "preLaunchCommands":[
-            "b deadEnd",
+            "preLaunchCommands":[            
+            "mon ws 2",
             "set mem inaccessible-by-default off",
             "set confirm off"
             ],
             "preRestartCommands": [
-            "enable breakpoint",
-            "break main"
+            "enable breakpoint",            
             ]
     
         },
         {
             "name": "PicoProbe",
             "cwd": "${workspaceFolder}",
-            //"svdFile" : "${workspaceRoot}/.vscode/STM32F103.svd",              
-            "executable": "build/lnBMP_RP2040_CLANG.elf",
+            //"svdFile" : "${workspaceRoot}/.vscode/rp2040.svd",              
+            "executable": "build/st7789.elf",
             "gdbPath" : "${config:armToolchainPath}/arm-none-eabi-gdb",        
             "request": "launch",
             "type": "cortex-debug",   
@@ -268,14 +116,12 @@
             ],
             "runToMain": true,
             "openOCDPreConfigLaunchCommands" : ["adapter speed 5000"], 
-            "preLaunchCommands":[                
-                "b deadEnd",
+            "preLaunchCommands":[                            
                 "set mem inaccessible-by-default off",
                 "set confirm off"
             ],
             "preRestartCommands": [
-            "enable breakpoint",
-            "break main"
+            "enable breakpoint",            
             ]
   
         },       
