--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,21 +11,18 @@ MESSAGE(STATUS "\tFinal name is ${EXTENSION}")
 cmake_minimum_required(VERSION 3.10)
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-MESSAGE(STATUS "===============")
-MESSAGE(STATUS "Starting lnDSO")
-MESSAGE(STATUS "===============")
+MESSAGE(STATUS "==================")
+MESSAGE(STATUS "Starting rustIli")
+MESSAGE(STATUS "==================")
 #____________________
 # Options
 #____________________
 
-#SET(LN_ENABLE_I2C  OFF CACHE INTERNAL "")
-#SET(LN_ENABLE_SPI  ON CACHE INTERNAL "")
-
-
 include(./build_default.cmake)
-#SET(RP2040_NO_FLASH True CACHE INTERNAL "")
 SET(AF_FOLDER  ${CMAKE_SOURCE_DIR}/lnArduino/)
 include(./mcuSelect.cmake)
+
+#-------------------------
 #ADD_DEFINITIONS("-O0")
 SET(CMAKE_TOOLCHAIN_FILE ${AF_FOLDER}/lnArduino.cmake)
 
@@ -42,6 +39,7 @@ include(${AF_FOLDER}/setup.cmake)
 add_subdirectory(simplerILI9341/rust/demo_st7735_160x128)
 GENERATE_GD32_FIRMWARE(st7789 main_rust.cpp)
 TARGET_LINK_LIBRARIES( st7789  rsdemo )
-#TARGET_LINK_LIBRARIES( st7789  simplerILI9341 ${DSO_EXTRA_LIB})
 TARGET_LINK_LIBRARIES( st7789  lnarduino_c_bindings )
+ADD_DEPENDENCIES(rsdemo lnarduino_c_bindings)
+#TARGET_LINK_LIBRARIES( st7789  simplerILI9341 ${DSO_EXTRA_LIB})
 
